--- a/dubbo-spring-boot-samples/auto-configure-samples/consumer-sample/src/main/resources/application.yml
+++ b/dubbo-spring-boot-samples/auto-configure-samples/consumer-sample/src/main/resources/application.yml
@@ -1,3 +1,13 @@
 spring:
   application:
     name: dubbo-auto-configure-consumer-sample
+
+dubbo:
+  registry:
+    address: zookeeper://zk-test-master1:meizu:mz:2181
+  metadata-report:
+     address: zookeeper://zk-test-master1.meizu.mz:2181
+  metric:
+    port: 20882
+    protocol: dubbo
+
