--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <groupId>org.apache.dubbo</groupId>
     <artifactId>dubbo-spring-boot-project</artifactId>
-    <version>${revision}</version>
+    <version>2.7.2-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -38,7 +38,7 @@
     <properties>
         <maven_javadoc_version>3.0.1</maven_javadoc_version>
         <maven_surefire_version>2.19.1</maven_surefire_version>
-        <revision>2.7.1</revision>
+        <revision>2.7.2-SNAPSHOT</revision>
     </properties>
 
     <modules>
