--- a/dubbo-spring-boot-samples/auto-configure-samples/consumer-sample/src/main/resources/application.yml
+++ b/dubbo-spring-boot-samples/auto-configure-samples/consumer-sample/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
 
 dubbo:
   registry:
-    address: zookeeper://zk-test-master1:meizu:mz:2181
+    address: zookeeper://zk-test-master1.meizu.mz:2181
   metadata-report:
      address: zookeeper://zk-test-master1.meizu.mz:2181
   metric:
