--- a/dubbo-spring-boot-samples/auto-configure-samples/provider-sample/src/main/resources/application.properties
+++ b/dubbo-spring-boot-samples/auto-configure-samples/provider-sample/src/main/resources/application.properties
@@ -7,6 +7,9 @@ dubbo.scan.base-packages=org.apache.dubbo.spring.boot.demo.provider.service
 ## dubbo.application.name=${spring.application.name}
 # Dubbo Protocol
 dubbo.protocol.name=dubbo
-dubbo.protocol.port=12345
+dubbo.protocol.port=20881
 ## Dubbo Registry
-dubbo.registry.address=N/A
+dubbo.registry.address=zookeeper://zk-test-master1.meizu.mz:2181
+dubbo.metadata-report.address=zookeeper://zk-test-master1.meizu.mz:2181
+dubbo.metric.port=30881
+dubbo.metric.protocol=dubbo
